--- a/demo/config/franko_fr3_config.yaml
+++ b/demo/config/franko_fr3_config.yaml
@@ -29,28 +29,29 @@ objectT_dimensions: [0.075, 0.0125] # [height, radius]
 objectT_file: "/home/humation/Documents/177688_CQT-15.stl"
 #objectT_pose: [0.0775, 0.491, 0.064, 1.5708, 1.5708, 0]
 #objectT_pose: [0.1525, 0.491, 0.064, 1.5708, 1.5708, 0]
-objectT_pose: [0.155, 0.4915, 0.08, 1.5708, 1.5708, 0] # real evt noch y anpassen? x?
+#objectT_pose: [0.155, 0.4915, 0.08, 1.5708, 1.5708, 0] # real tall magazine
+objectT_pose: [0.155, 0.4915, 0.06, 1.5708, 1.5708, 0] # real short magazine
 #objectT_pose: [0.3225, 0.4915, 0.0465, 1.5708, 1.5708, 0]
 #objectT_pose: [0.0775, 0.591, 0.064, 1.5708, 1.5708, 0]
 
 objectL_name: "objectL"
 #objectL_dimensions: [0.043, 0.0125] # [height, radius]
 objectL_file: "/home/humation/Documents/177692_CQL-15.stl"
-objectL_pose: [0,2175, 0.436, 0.064, 1.5708, 1.5708, 0]
+objectL_pose: [0.2175, 0.436, 0.064, 1.5708, 1.5708, 0]
 #objectL_pose: [0.1425, 0.5425, 0.064, 1.5708, 1.5708, 0]
 
 objectI_name: "objectI"
 #objectI_dimensions: [0.043, 0.0125] # [height, radius]
 objectI_file: "/home/humation/Documents/177696_CQ-15.stl"
-objectI_pose: [0,2175, 0.546, 0.057, 0, 0, 0]
+objectI_pose: [0.2175, 0.546, 0.057, 0, 0, 0]
 #objectI_pose: [0.1425, 0.6525, 0.057, 0, 0, 0]
 
 # Collision object for assembly
 # CYLINDER object specifications
 assembly_object_name: "assembly_object"
-assembly_object_dimensions: [0.3, 0.01] # [height, radius]
+assembly_object_dimensions: [0.2, 0.01] # [height, radius]
 #assembly_object_pose: [0.1, -0.5, 0.376, 1.5708, 0, 0]
-assembly_object_pose: [0.2, -0.7, 0.376, 1.5708, 0, 0]
+assembly_object_pose: [0.2, -0.69, 0.376, 1.5708, 0, 0]
 
 # Table model
 spawn_table: true
@@ -66,20 +67,29 @@ magazine_file: "/home/humation/Documents/magazine_mirrored.stl"
 magazine_pose: [0,184, 0.5185, 0.0, 0, 0, -1.5708]
 #magazine_pose: [0.11, 0.625, 0.0, 0, 0, -1.5708]
 
-# Gripper grasp frame transform [x,y,z,r,p,y]
+# Gripper grasp frame transform [x,y,z,r,p,y] y,p,r?!
 # grasp_frame_transform: [0, 0, 0.1, 1.571, 0.785, 1.571]
 # grasp_frame_transform: [0, 0, 0.1, 0, 1.571, 0]
 #grasp_frame_transform: [0, 0, 0.12, 0, 3.14, 0]
 #grasp_frame_transform: [0, 0, 0.12, 0, 1.571, 0]
 #grasp_frame_transform: [0, 0, 0.12, -1.571, -1.571, 0]
 grasp_frame_transform: [0, 0, 0, -1.571, -1.571, 0]
+#assemble_frame_transform: [0, 0, 0, -1.571, 1.571, 0]
 assemble_frame_transform: [0, 0, 0, 0, 0, 0]
 
 # Place pose [x,y,z,r,p,y]
 # place_pose: [0.6, -0.15, 0, 0, 0, 0]
 # place_pose: [0.1, -0.65, 0.376, 0, 0, 0] #current!?
-place_pose1: [0.2, -0.75, 0.376, 0, 0, 0]
-place_pose2: [0.2, -0.75, 0.376, 1.571, 0, 0] 
+# place_pose1: [0.2, -0.75, 0.376, 0, 0, 0]
+place_pose1: [0.2, -0.75, 0.376, 1.571, 0, -1.571]
+#place_pose2: [0.2, -0.75, 0.376, -1.571, -1.571, 0] 
+place_pose2: [0.2, -0.75, 0.376, 0, -3.14, -1.571] 
+#place_pose2: [0.2, -0.75, 0.376, 0, -1.571, 0, 0] 
+#place_pose3: [0.2, -0.75, 0.376, 1.571, 1.571, 0] 
+#place_pose3: [0.2, -0.75, 0.376, -3.141, 0.000, 1.658] 
+#place_pose3: [0.2, -0.75, 0.376, -1.571, 4.71, 1.571] 
+#place_pose3: [0.2, -0.75, 0.376, -1.571, 1.571, 3.14]
+place_pose3: [0.2, -0.75, 0.376, 0, -3.14, 1.571]
 
 # place_pose: [0.5, 0.3, 0.532, 0, 0, 0]
 place_surface_offset: 0.0001 # place offset from table
