--- a/demo/package.xml
+++ b/demo/package.xml
@@ -15,6 +15,7 @@
 
   <depend>roscpp</depend>
   <depend>rosparam_shortcuts</depend>
+  <depend>sensor_msgs</depend>
 
   <depend>moveit_core</depend>
   <depend>moveit_ros_planning_interface</depend>
