work on integrating assembled t magazin in moveit

--- a/demo/CMakeLists.txt
+++ b/demo/CMakeLists.txt
@@ -22,18 +22,24 @@ add_library(${PROJECT_NAME}_pick_place_task src/pick_place_task.cpp)
 add_library(${PROJECT_NAME}_franka_pick_task src/franka_pick_task.cpp)
 add_library(${PROJECT_NAME}_move_home_task src/move_home_task.cpp)
 add_library(${PROJECT_NAME}_hold_task src/hold_task.cpp)
-target_link_libraries(${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${catkin_LIBRARIES})
+add_library(${PROJECT_NAME}_place_task src/place_task.cpp)
+add_library(${PROJECT_NAME}_release_task src/release_task.cpp)
+target_link_libraries(${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${PROJECT_NAME}_place_task ${PROJECT_NAME}_release_task ${catkin_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${catkin_LIBRARIES})
 target_include_directories(${PROJECT_NAME}_pick_place_task PUBLIC include)
 target_include_directories(${PROJECT_NAME}_franka_pick_task PUBLIC include)
 target_include_directories(${PROJECT_NAME}_move_home_task PUBLIC include)
 target_include_directories(${PROJECT_NAME}_hold_task PUBLIC include)
+target_include_directories(${PROJECT_NAME}_place_task PUBLIC include)
+target_include_directories(${PROJECT_NAME}_release_task PUBLIC include)
 target_include_directories(${PROJECT_NAME}_pick_place_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
 target_include_directories(${PROJECT_NAME}_franka_pick_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
 target_include_directories(${PROJECT_NAME}_move_home_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
 target_include_directories(${PROJECT_NAME}_hold_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
-add_dependencies(${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-install(TARGETS ${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task
+target_include_directories(${PROJECT_NAME}_place_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME}_release_task SYSTEM PUBLIC ${catkin_INCLUDE_DIRS})
+add_dependencies(${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${PROJECT_NAME}_place_task ${PROJECT_NAME}_release_task ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+install(TARGETS ${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${PROJECT_NAME}_place_task ${PROJECT_NAME}_release_task
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -60,7 +66,7 @@ demo(ik_clearance_cost)
 demo(fallbacks_move_to)
 
 demo(pick_place_demo)
-target_link_libraries(${PROJECT_NAME}_pick_place_demo ${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task)
+target_link_libraries(${PROJECT_NAME}_pick_place_demo ${PROJECT_NAME}_pick_place_task ${PROJECT_NAME}_move_home_task ${PROJECT_NAME}_hold_task ${PROJECT_NAME}_place_task ${PROJECT_NAME}_release_task)
 
 demo(franka_pick_demo)
 target_link_libraries(${PROJECT_NAME}_franka_pick_demo ${PROJECT_NAME}_franka_pick_task ${PROJECT_NAME}_move_home_task)
