--- a/demo/config/franko_fr3_config.yaml
+++ b/demo/config/franko_fr3_config.yaml
@@ -20,6 +20,7 @@ world_frame: "franko_world"
 table_reference_frame: "franko_world"
 # object_reference_frame: "world"
 object_reference_frame: "franko_fr3_link0"
+magazine_reference_frame: "franko_environment"
 surface_link: "table"
 
 # Collision object for picking
@@ -70,7 +71,7 @@ objectI_pose: [0,2175, 0.546, 0.057, 0, 0, 0]
 assembly_object_name: "assembly_object"
 assembly_object_dimensions: [0.2, 0.01] # [height, radius]
 #assembly_object_pose: [0.1, -0.5, 0.376, 1.5708, 0, 0]
-assembly_object_pose: [0.2, -0.69, 0.326, 1.5708, 0, 0]
+assembly_object_pose: [0.0, 0.0, 0.0, 0, 0, 0]
 
 # Table model
 spawn_table: true
@@ -78,12 +79,13 @@ table_name: "table"
 table_dimensions: [0.75, 0.75, 0.1]  # [length, width, height]
 table_pose: [0.025, 0.475, 0.0, 0, 0, 0]
 
-spawn_magazine: true
+spawn_magazines: true
 magazine_name: "magazine"
 #magazine_dimensions: [0.1, 0.2, 0.01]  # [length, width, height]
 #magazine_file: "/home/humation/Documents/magazin_festo_komplett.stl"
 magazine_file: "/home/humation/Documents/magazine_mirrored.stl"
-magazine_pose: [0,184, 0.5185, 0.0, 0, 0, -1.5708]
+magazine_poseT: [1.787, 0.145, 0.1, 0, 0, 1.571]
+magazine_poseL: [1.967, 0.145, 0.1, 0, 0, 1.571]
 #magazine_pose: [0.11, 0.625, 0.0, 0, 0, -1.5708]
 
 # Gripper grasp frame transform [x,y,z,r,p,y] y,p,r?!
