--- a/demo/config/franko_fr3_config.yaml
+++ b/demo/config/franko_fr3_config.yaml
@@ -71,7 +71,9 @@ objectI_pose: [0,2175, 0.546, 0.057, 0, 0, 0]
 assembly_object_name: "assembly_object"
 assembly_object_dimensions: [0.2, 0.01] # [height, radius]
 #assembly_object_pose: [0.1, -0.5, 0.376, 1.5708, 0, 0]
-assembly_object_pose: [0.0, 0.0, 0.0, 0, 0, 0]
+assembly_object_pose: [0.0, 0.0, 0.02, 0, 0, 0]
+assembly_object1_pose: [0.12, 0.0, -0.1, 0, 1.5708, 0]
+assembly_object2_pose: [-0.12, 0.0, -0.1, 0, 1.5708, 0]
 
 # Table model
 spawn_table: true
